--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,37 @@
-#main-container {
+#profile {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+	width: 100%;
+	height: 100vh;
+}
+
+#profile-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	position: absolute;
+	width: 100%;
+	height: 100vh;
+	top: 50%;
+	left: 0;
+	transform: translateY(-30%);
+}
+
+.profile-pic {
+	border-radius: 50%;
+	border: black solid 1px;
 }
 
 .header {
 	display: flex;
 	justify-content: center;
+	margin: 10px 0;
 }
 
 .header-title {
-	color: #000;
 	font-family: 'Roboto Condensed', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 3px;
@@ -19,16 +41,82 @@
 
 .header-title-visible {
 	color: #000;
-	transition: 5s ease-in-out;
+	transition: 2s ease-in-out;
 }
 
 .about-text-container {
 	width: 40%;
-	margin: auto;
+	text-align: justify;
+	margin: 10px 0;
+	overflow: hidden;
 }
 
 .about-text {
-	font-size: 20px;
+	font-size: 16px;
 	letter-spacing: 2px;
 	margin: 0;
+	color: #fff;
+	transform: translateY(-50px);
+}
+
+.about-text-visible {
+	color: #000;
+	transform: translateY(0);
+	transition: .5s ease-in-out;
+}
+
+.contact-info {
+	display: flex;
+	align-items: center;
+	margin: 10px;
+}
+
+.contact-info a {
+	padding: 0 20px;
+}
+
+#work-experience {
+	height: 100vh;
+}
+
+#side-bar {
+	position: fixed;
+	right: 0;
+	top: 50%;
+	transform: translateY(-50%);
+	border-left: #000 solid 1px;
+}
+
+#side-bar ul {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	list-style-type: none;
+	margin: 100px 0;
+	padding: 0 40px;
+}
+
+#side-bar li {
+	padding: 20px 0;
+}
+
+#side-bar a {
+	border: none;
+	background: none;
+	outline: none;
+	text-decoration: none;
+	color: #000;
+	border-bottom: #fff solid 2px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+#side-bar a:hover {
+	cursor: pointer;
+	border-bottom: #000 solid 2px;
+}
+
+#side-bar img {
+	padding: 4px;
 }
