--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+html, body {
+	margin: 0;
+	padding: 0;
+	background-image: url('images/profile-pic.jpg');
+	box-sizing: border-box;
+}
+
 #profile {
 	display: flex;
 	flex-direction: column;
@@ -90,6 +97,16 @@
 	padding: 0 20px;
 }
 
-#work-experience {
+#education {
 	height: 100vh;
+}
+
+#skills {
+	height: 100vh;
+}
+
+.section-title {
+	font-size: 50px;
+	text-align: center;
+	margin-bottom: 4px;
 }
