--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,9 @@ html, body {
 	margin: 0;
 	padding: 0;
 	background-image: url('images/profile-pic.jpg');
+}
+
+* {
 	box-sizing: border-box;
 }
 
@@ -97,16 +100,21 @@ html, body {
 	padding: 0 20px;
 }
 
+#work-experience {
+	min-height: 100vh;
+}
+
 #education {
-	height: 100vh;
+	min-height: 100vh;
 }
 
 #skills {
-	height: 100vh;
+	min-height: 100vh;
 }
 
 .section-title {
-	font-size: 50px;
+	font-size: 80px;
 	text-align: center;
-	margin-bottom: 4px;
+	margin-bottom: 2px;
+	color: #aaa
 }
