--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,28 @@
 html, body {
 	margin: 0;
 	padding: 0;
-	background-image: url('images/profile-pic.jpg');
+	font-family: 'Roboto Condensed', sans-serif;
 }
 
 * {
 	box-sizing: border-box;
+}
+
+.second-page {
+	position: relative;
+}
+
+.second-page::after {
+	content: '';
+	/* background: red; */
+	background-image: url('../images/stripes-light.png');
+	opacity: .2;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
 }
 
 #profile {
@@ -97,7 +114,29 @@ html, body {
 }
 
 .contact-info a {
-	padding: 0 20px;
+	margin: 0 20px;
+}
+
+.contact-info button {
+	margin: 0 20px;
+	cursor: pointer;
+	background: none;
+	border: none;
+	outline: none;
+}
+
+.email-show {
+	background: rgba(0, 0, 0, 0.7);
+	padding: 10px 35px;
+	font-size: 20px;
+	border-radius: 10px;
+	color: #fff;
+	opacity: 1;
+	transition: .5s ease-in-out;
+}
+
+.hide-email {
+	opacity: 0;
 }
 
 #work-experience {
