--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1,5 +1,5 @@
 .section-container {
-	width: 70%;
+	width: 100%;
 	border-top: #777 solid 1px;
 	position: relative;
 	margin: 0 auto;
@@ -57,10 +57,25 @@
 	border-top-right-radius: 0;
 }
 
+.front-card {
+	display: flex;
+}
+
+.front-card img {
+	width: 50px;
+	height: 50px;
+	margin: 0 10px;
+	filter: grayscale(100%);
+}
+
 .front-card:hover {
 	background: rgba(0,0,0,0.2);
 	color: #fff;
 	transition: .1s linear;
+}
+
+.front-card:hover img {
+	filter: grayscale(0);
 }
 
 .sharp-bottom-edges {
