start making it responsive

--- a/css/education.css
+++ b/css/education.css
@@ -1,57 +1,63 @@
 #education .section-container h1 {
-	border-bottom: #000 solid 1px;
-	width: fit-content;
-	font-size: 25px;
-	margin-top: 60px;
+  border-bottom: #000 solid 1px;
+  width: fit-content;
+  font-size: 25px;
+  margin-top: 60px;
 }
 
 #education section {
-	margin-left: 40px;
+  margin-left: 40px;
 }
 
 .degree h2 {
-	font-size: 20px;
-	margin: 0;
-	padding: 0;
+  font-size: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 .degree h3 {
-	font-size: 18px;
-	margin: 0;
-	margin-left: 20px;
-	padding: 0;
-	color: #333;
+  font-size: 18px;
+  margin: 0;
+  margin-left: 20px;
+  padding: 0;
+  color: #333;
 }
 
 #education .section-container {
-	padding: 0 30%;
-	box-sizing: border-box;
+  padding: 0 30%;
+  box-sizing: border-box;
 }
 
 .internships h2 {
-	font-size: 20px;
-	margin: 0;
-	margin-top: 10px;
+  font-size: 20px;
+  margin: 0;
+  margin-top: 10px;
 }
 
 #education .section-container h4 {
-	margin: 2px 0 10px 5px;
-	color: #777
+  margin: 2px 0 10px 5px;
+  color: #777;
 }
 
 .internships ul {
-	margin: 5px;
+  margin: 5px;
 }
 
 .certificates h2 {
-	font-size: 20px;
-	margin-bottom: 0;
+  font-size: 20px;
+  margin-bottom: 0;
 }
 
 .certificates h3 {
-	font-size: 15px;
-	margin: 0;
-	margin-left: 20px;
-	padding: 0;
-	color: #333;
+  font-size: 15px;
+  margin: 0;
+  margin-left: 20px;
+  padding: 0;
+  color: #333;
+}
+
+@media (max-width: 1024px) {
+  #education .section-container {
+    padding: 0 10%;
+  }
 }
