--- a/css/main.css
+++ b/css/main.css
@@ -1,164 +1,194 @@
-html, body {
-	margin: 0;
-	padding: 0;
-	font-family: 'Roboto Condensed', sans-serif;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .second-page {
-	position: relative;
+  position: relative;
 }
 
 .second-page::after {
-	content: '';
-	/* background: red; */
-	background-image: url('../images/stripes-light.png');
-	opacity: .2;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: -1;
+  content: "";
+  /* background: red; */
+  background-image: url("../images/stripes-light.png");
+  opacity: 0.2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 #profile {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	position: relative;
-	width: 100%;
-	height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
 }
 
 #profile-container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	position: absolute;
-	width: 100%;
-	height: 100vh;
-	top: 50%;
-	left: 0;
-	transform: translateY(-30%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+  position: absolute;
+  width: 100%;
+  min-height: 100vh;
+  top: 50%;
+  left: 0;
+  transform: translateY(-30%);
 }
 
 .profile-pic {
-	border-radius: 50%;
-	border: black solid 1px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: black solid 1px;
 }
 
 .header {
-	display: flex;
-	justify-content: center;
-	margin: 10px 0;
+  display: flex;
+  justify-content: center;
+  margin: 10px 0;
 }
 
 .header-title {
-	font-family: 'Roboto Condensed', sans-serif;
-	text-transform: uppercase;
-	letter-spacing: 3px;
-	position: relative;
-	color: #fff;
+  font-family: "Roboto Condensed", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  position: relative;
+  color: #fff;
 }
 
 .header-title-visible {
-	color: #000;
-	transition: 2s ease-in-out;
+  color: #000;
+  transition: 2s ease-in-out;
 }
 
 .about-text-container {
-	width: 40%;
-	text-align: justify;
-	margin: 10px 0;
-	overflow: hidden;
-	position: relative;
+  width: 40%;
+  text-align: justify;
+  margin: 10px 0;
+  overflow: hidden;
+  position: relative;
 }
 
 #about-canvas {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 99%;
-	/* height: 99%; */
-	border: black solid 1px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 99%;
+  /* height: 99%; */
+  border: black solid 1px;
 }
 
 .about-text {
-	font-size: 16px;
-	letter-spacing: 2px;
-	margin: 0;
-	color: #fff;
-	transform: translateY(-50px);
+  font-size: 16px;
+  letter-spacing: 2px;
+  margin: 0;
+  padding: 0;
+  color: #fff;
+  transform: translateY(-50px);
 }
 
 .about-text-visible {
-	color: #000;
-	transform: translateY(0);
-	transition: .5s ease-in-out;
+  color: #000;
+  transform: translateY(0);
+  transition: 0.5s ease-in-out;
 }
 
 #matrix-canvas {
-	background: #151515;
-	border-radius: 5px;
+  background: #151515;
+  border-radius: 5px;
 }
 
 .contact-info {
-	display: flex;
-	align-items: center;
-	margin: 10px;
+  display: flex;
+  align-items: center;
+  margin: 10px;
 }
 
 .contact-info a {
-	margin: 0 20px;
+  margin: 0 20px;
 }
 
 .contact-info button {
-	margin: 0 20px;
-	cursor: pointer;
-	background: none;
-	border: none;
-	outline: none;
+  margin: 0 20px;
+  cursor: pointer;
+  background: none;
+  border: none;
+  outline: none;
 }
 
-.contact-info a:hover, .contact-info button:hover {
-	transform: scale(1.2);
-	transition: .3s ease-in-out;
+.contact-info a:hover,
+.contact-info button:hover {
+  transform: scale(1.2);
+  transition: 0.3s ease-in-out;
 }
 
 .email-show {
-	background: rgba(0, 0, 0, 0.7);
-	padding: 10px 35px;
-	font-size: 20px;
-	border-radius: 10px;
-	color: #fff;
-	opacity: 1;
-	transition: .5s ease-in-out;
+  background: rgba(0, 0, 0, 0.7);
+  padding: 10px 35px;
+  font-size: 20px;
+  border-radius: 10px;
+  color: #fff;
+  opacity: 1;
+  transition: 0.5s ease-in-out;
 }
 
 .hide-email {
-	opacity: 0;
+  opacity: 0;
 }
 
 #work-experience {
-	min-height: 100vh;
+  min-height: 100vh;
 }
 
 #education {
-	min-height: 100vh;
+  min-height: 100vh;
 }
 
 #skills {
-	min-height: 100vh;
+  min-height: 100vh;
 }
 
 .section-title {
-	font-size: 80px;
-	text-align: center;
-	margin-bottom: 2px;
-	color: #aaa
+  font-size: 80px;
+  text-align: center;
+  margin-bottom: 2px;
+  color: #aaa;
+}
+
+@media (max-width: 1024px) {
+  .profile-pic {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: black solid 1px;
+  }
+
+  #profile-container {
+    top: 40%;
+    left: 0;
+    transform: translateY(-30%);
+  }
+
+  .about-text-container {
+    width: 80%;
+    margin: 20px 0;
+  }
+
+  .section-title {
+    font-size: 40px;
+  }
 }
