--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,4 +1,3 @@
-
 .bar {
   display: block;
   height: 5px;
@@ -7,23 +6,23 @@
   margin: 10px auto;
 }
 
-.button {
+.hamburger {
   cursor: pointer;
   display: inline-block;
   width: auto;
-	margin: 0 auto;
-  -webkit-transition: all .7s ease;
-  -moz-transition: all .7s ease;
-  -ms-transition: all .7s ease;
-  -o-transition: all .7s ease;
-  transition: all .7s ease;
+  margin: 0 auto;
+  -webkit-transition: all 0.7s ease;
+  -moz-transition: all 0.7s ease;
+  -ms-transition: all 0.7s ease;
+  -o-transition: all 0.7s ease;
+  transition: all 0.7s ease;
 }
 
 .nav-right {
   position: fixed;
   right: 40px;
-	top: 20px;
-	z-index: 5;
+  top: 20px;
+  z-index: 6;
 }
 
 .middle {
@@ -31,23 +30,23 @@
 }
 
 .bar {
-  -webkit-transition: all .7s ease;
-  -moz-transition: all .7s ease;
-  -ms-transition: all .7s ease;
-  -o-transition: all .7s ease;
-  transition: all .7s ease;
+  -webkit-transition: all 0.7s ease;
+  -moz-transition: all 0.7s ease;
+  -ms-transition: all 0.7s ease;
+  -o-transition: all 0.7s ease;
+  transition: all 0.7s ease;
 }
 
 .nav-right .active .bar {
   background-color: #fff;
-  -webkit-transition: all .7s ease;
-  -moz-transition: all .7s ease;
-  -ms-transition: all .7s ease;
-  -o-transition: all .7s ease;
-  transition: all .7s ease;
+  -webkit-transition: all 0.7s ease;
+  -moz-transition: all 0.7s ease;
+  -ms-transition: all 0.7s ease;
+  -o-transition: all 0.7s ease;
+  transition: all 0.7s ease;
 }
 
-.button.active .top {
+.hamburger.active .top {
   -webkit-transform: translateY(15px) rotateZ(45deg);
   -moz-transform: translateY(15px) rotateZ(45deg);
   -ms-transform: translateY(15px) rotateZ(45deg);
@@ -55,7 +54,7 @@
   transform: translateY(15px) rotateZ(45deg);
 }
 
-.button.active .bottom {
+.hamburger.active .bottom {
   -webkit-transform: translateY(-15px) rotateZ(-45deg);
   -moz-transform: translateY(-15px) rotateZ(-45deg);
   -ms-transform: translateY(-15px) rotateZ(-45deg);
@@ -63,7 +62,7 @@
   transform: translateY(-15px) rotateZ(-45deg);
 }
 
-.button.active .middle {
+.hamburger.active .middle {
   width: 0;
 }
 
@@ -72,19 +71,19 @@ nav {
 }
 
 .sidebar {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   height: 100%;
   width: 400px;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 5;
   right: 0;
-	background-color: rgba(0, 0, 0, .85);
-	border-left: solid #000 1px;
-	transform: translateX(100%);
-	transition: .5s ease-in-out;
+  background-color: rgba(0, 0, 0, 0.85);
+  border-left: solid #000 1px;
+  transform: translateX(100%);
+  transition: 0.5s ease-in-out;
 }
 
 .move-to-left {
@@ -96,7 +95,7 @@ nav {
   margin: 0;
   list-style: none;
   position: relative;
-	text-align: center;
+  text-align: center;
 }
 
 .sidebar-item {
@@ -106,49 +105,49 @@ nav {
   -moz-transform: translateY(-20px);
   -ms-transform: translateY(-20px);
   -o-transform: translateY(-20px);
-	transform: translateY(-20px);
+  transform: translateY(-20px);
 }
 
 .sidebar-item:first-child {
-  -webkit-transition: all .7s .2s ease-in-out;
-  -moz-transition: all .7s .2s ease-in-out;
-  -ms-transition: all .7s .2s ease-in-out;
-  -o-transition: all .7s .2s ease-in-out;
-  transition: all .7s .2s ease-in-out;
+  -webkit-transition: all 0.7s 0.2s ease-in-out;
+  -moz-transition: all 0.7s 0.2s ease-in-out;
+  -ms-transition: all 0.7s 0.2s ease-in-out;
+  -o-transition: all 0.7s 0.2s ease-in-out;
+  transition: all 0.7s 0.2s ease-in-out;
 }
 
 .sidebar-item:nth-child(2) {
-  -webkit-transition: all .7s .4s ease-in-out;
-  -moz-transition: all .7s .4s ease-in-out;
-  -ms-transition: all .7s .4s ease-in-out;
-  -o-transition: all .7s .4s ease-in-out;
-  transition: all .7s .4s ease-in-out;
+  -webkit-transition: all 0.7s 0.4s ease-in-out;
+  -moz-transition: all 0.7s 0.4s ease-in-out;
+  -ms-transition: all 0.7s 0.4s ease-in-out;
+  -o-transition: all 0.7s 0.4s ease-in-out;
+  transition: all 0.7s 0.4s ease-in-out;
 }
 
 .sidebar-item:nth-child(3) {
-  -webkit-transition: all .7s .6s ease-in-out;
-  -moz-transition: all .7s .6s ease-in-out;
-  -ms-transition: all .7s .6s ease-in-out;
-  -o-transition: all .7s .6s ease-in-out;
-  transition: all .7s .6s ease-in-out;
+  -webkit-transition: all 0.7s 0.6s ease-in-out;
+  -moz-transition: all 0.7s 0.6s ease-in-out;
+  -ms-transition: all 0.7s 0.6s ease-in-out;
+  -o-transition: all 0.7s 0.6s ease-in-out;
+  transition: all 0.7s 0.6s ease-in-out;
 }
 
 .sidebar-item:last-child {
-  -webkit-transition: all .7s .8s ease-in-out;
-  -moz-transition: all .7s .8s ease-in-out;
-  -ms-transition: all .7s .8s ease-in-out;
-  -o-transition: all .7s .8s ease-in-out;
-  transition: all .7s .8s ease-in-out;
+  -webkit-transition: all 0.7s 0.8s ease-in-out;
+  -moz-transition: all 0.7s 0.8s ease-in-out;
+  -ms-transition: all 0.7s 0.8s ease-in-out;
+  -o-transition: all 0.7s 0.8s ease-in-out;
+  transition: all 0.7s 0.8s ease-in-out;
 }
 
 .sidebar-item.active {
-	opacity: 1;
+  opacity: 1;
 }
 
 .sidebar-anchor {
   color: #fff;
-	text-decoration: none;
-	font-family: 'Roboto Condensed', sans-serif;
+  text-decoration: none;
+  font-family: "Roboto Condensed", sans-serif;
   font-size: 1.8em;
   text-transform: uppercase;
   position: relative;
@@ -163,11 +162,11 @@ nav {
   bottom: 0;
   left: 0;
   background-color: #fff;
-  -webkit-transition: all .7s ease-in-out;
-  -moz-transition: all .7s ease-in-out;
-  -ms-transition: all .7s ease-in-out;
-  -o-transition: all .7s ease-in-out;
-  transition: all .7s ease-in-out;
+  -webkit-transition: all 0.7s ease-in-out;
+  -moz-transition: all 0.7s ease-in-out;
+  -ms-transition: all 0.7s ease-in-out;
+  -o-transition: all 0.7s ease-in-out;
+  transition: all 0.7s ease-in-out;
 }
 
 .sidebar-anchor:hover:before {
@@ -175,7 +174,46 @@ nav {
 }
 
 @media (max-width: 1350px) {
-	.sidebar {
-		width: 100%;
-	}
+  .sidebar {
+    width: 100%;
+  }
+
+  .bar {
+    height: 3px;
+    width: 30px;
+    background-color: #000;
+    margin: 5px auto;
+  }
+
+  .hamburger.active .top {
+    -webkit-transform: translateY(8px) rotateZ(45deg);
+    -moz-transform: translateY(8px) rotateZ(45deg);
+    -ms-transform: translateY(8px) rotateZ(45deg);
+    -o-transform: translateY(8px) rotateZ(45deg);
+    transform: translateY(8px) rotateZ(45deg);
+  }
+
+  .hamburger.active .bottom {
+    -webkit-transform: translateY(-8px) rotateZ(-45deg);
+    -moz-transform: translateY(-8px) rotateZ(-45deg);
+    -ms-transform: translateY(-8px) rotateZ(-45deg);
+    -o-transform: translateY(-8px) rotateZ(-45deg);
+    transform: translateY(-8px) rotateZ(-45deg);
+  }
+
+  .nav-right {
+    top: 15px;
+    right: 30px;
+  }
+
+  .top-bar {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #fff;
+    z-index: 4;
+  }
 }
